--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ issue_tracker: https://github.com/btastic/flutter_native_image/issues
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.10.0 <=2.2.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 flutter:
   plugin:
